results/2018-05-29-13-43-01-EDT/03.exec_error_2018-05-29-13-43-01-EDT.log
./test-all.sh: 9: ./test-all.sh: source: not found
Traceback (most recent call last):
  File "./01.interactive.e2e.py", line 6, in <module>
    import azureml.core
ImportError: No module named azureml.core
  File "./02.local.py", line 32
    print(project.project_directory, project.run_history.name, sep = '\n')
                                                                   ^
SyntaxError: invalid syntax
  File "./03.aci.py", line 33
    print(project.project_directory, project.run_history.name, sep = '\n')
                                                                   ^
SyntaxError: invalid syntax
  File "./04.dsvm.py", line 32
    print(project.project_directory, project.run_history.name, sep = '\n')
                                                                   ^
SyntaxError: invalid syntax
  File "./05.spark.py", line 32
    print(project.project_directory, project.run_history.name, sep = '\n')
                                                                   ^
SyntaxError: invalid syntax
  File "./07.sklearn.hd.py", line 34
    print(project.project_directory, project.run_history.name, sep = '\n')
                                                                   ^
SyntaxError: invalid syntax
  File "./08.tf.hd.py", line 35
    print(project.project_directory, project.run_history.name, sep = '\n')
                                                                   ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "./10.o16n.py", line 6, in <module>
    import azureml.core
ImportError: No module named azureml.core
